--- a/ReimbursementProject1/src/main/webapp/html/reimbursements.html
+++ b/ReimbursementProject1/src/main/webapp/html/reimbursements.html
@@ -1,6 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <style>
+      .center {
+  margin-left: auto;
+  margin-right: auto;
+  
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.center td, .center th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.center tr:nth-child(even){background-color: #f2f2f2;}
+
+.center tr:hover {background-color: #ddd;}
+
+.center th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
+ }
+
+ body {
+   background-image: url(https://cdn.hipwallpaper.com/i/30/72/DWrZNO.jpg);
+   background-repeat: no-repeat;
+   background-attachment: fixed;  
+   background-size: cover;
+  }
+
+   </style>
 <meta charset="ISO-8859-1">
 <title>Reimbursements</title>
 <script defer src="js/usertable.js"></script>
@@ -12,8 +47,10 @@
 		integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
 		crossorigin="anonymous"></script>  
 </head>
+
 <body>
-   <table class="table table-striped">
+
+   <table class="center" class="table">
       <thead class="thead-dark">
          <tr>
             <th scope="col">Reimbursement Id</th>
